--- a/Lab05_Anagrammi/.project
+++ b/Lab05_Anagrammi/.project
@@ -20,4 +20,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>db/mark.sql</name>
+			<type>1</type>
+			<locationURI>PARENT-2-PROJECT_LOC/Anagramma/db/mark.sql</locationURI>
+		</link>
+	</linkedResources>
 </projectDescription>
